# apc

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  checks.json  funcs.h  main.c
.github/workflows/: clang-tidy.yml  compile.yml
cmake/: CompilerWarnings.cmake  StaticAnalyzers.cmake
headers/: file.h  library.h  queue.h  setup.h
make_scripts/: init_miniaudio.sh
src/: CMakeLists.txt  file.c  library.c  main.c  queue.c  saved.txt  setup.c
src/headers/: file.c  file.h  library.c  library.h  queue.c  queue.h  setup.c  setup.h
